# Hyperliquid-AI-trading-agent

./: .env.example  .gitignore  DEPLOY.md  README.md  config.yaml  pyproject.toml
data/models/: btc_tree.meta.json  btc_tree.pkl
deploy/: hl-agent.service  nginx-hl-agent.conf
scripts/: check_prompt_size.py  deploy.sh  drift_check.py  dump_payload.py  inspect_feature_importance.py  one_shot.py  pull_binance_candles.py  retrain_tree.py  show_state.py  train_tree.py  tune_hyperparams.py
src/hl_agent/: account.py  agent.py  context.py  cost.py  executor.py  features.py  hl_client.py  llm_provider.py  main.py  market_data.py  monitor.py  risk.py  runtime.py  server.py  settings.py  storage.py  tools.py  trades.py  tree_model.py  tree_outcomes.py  version.py
tests/: test_context.py  test_correlation.py  test_cost.py  test_drift_check.py  test_executor_rounding.py  test_features.py  test_llm_provider.py  test_monitor.py  test_risk.py  test_runtime.py  test_trades.py  test_tree_model.py  test_tree_outcomes.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/settings/: page.tsx
web/app/trades/: page.tsx
web/components/: AccountHeader.tsx  CostPanel.tsx  DecisionsTable.tsx  EquityChart.tsx  ErrorBanner.tsx  LeverageForm.tsx  ModelSwitchForm.tsx  MonitorForm.tsx  Panel.tsx  PauseToggle.tsx  PositionsTable.tsx  RiskForm.tsx  ShadowPanel.tsx  TradesTable.tsx  TreePanel.tsx  VersionBadge.tsx
web/lib/: api.ts  format.ts  types.ts
