[project]
name = "hl-agent"
version = "0.1.0"
description = "LLM-driven trading agent for Hyperliquid perpetuals"
requires-python = ">=3.10"
dependencies = [
    "hyperliquid-python-sdk>=0.10.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "APScheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
hl-agent = "hl_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
